feat: triangle function; sample uses

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     canvas {
       border: 3px dashed darkred;
-      transform: scale(-1);
+      transform: scaleY(-1);
     }
   </style>
 </head>
